# V4-front

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
examples/: led_blink.v4  led_test_simple.v4
include/v4front/: compile.h  compile.hpp  disasm.hpp  errors.def  errors.h  errors.hpp  front_api.h
src/: compile.cpp  disasm.cpp  front_compile.cpp  prim_table.hpp
tests/: test_arithmetic.cpp  test_begin_again.cpp  test_begin_until.cpp  test_bitwise.cpp  test_bytecode_io.cpp  test_c.c  test_case_insensitive.cpp  test_comments.cpp  test_comparison.cpp  test_composite.cpp  test_constant.cpp  test_disasm.cpp  test_do_loop.cpp  test_error_position.cpp  test_errors.cpp  test_front.cpp  test_if_then_else.cpp  test_integration.cpp  test_kat.cpp  test_local_vars_opt.cpp  test_memory_access.cpp  test_recurse.cpp  test_return_stack_compile.cpp  test_stack.cpp  test_sys_compile.cpp  test_task.cpp  test_variable.cpp  test_while_repeat.cpp  test_word_definitions.cpp
tests/kat/: sys.kat
